--- a/RSub1/Info.plist
+++ b/RSub1/Info.plist
@@ -60,5 +60,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>NSMicrophoneUsageDescription</key>
+    <string>The microphone listens for anonymous tokens from nearby devices.</string>
 </dict>
 </plist>
